# ImageSharpening

MPI/: CMakeCache.txt  CMakeLists.txt  Makefile  Sharp  cmake_install.cmake  mpi_hosts  test.cpp
OpenMP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
Pruebas/: blur.cu
Secuencial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
